Updates to address JOSS reviewer comments
- Add figure showing data structure
- Add figure showing example output
- Remove reference to current repo
- Convert URLs to other repos to links
- Captilize references to AGS4 guidelines

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -1,5 +1,5 @@
 @article{AGS:2017,
-  title={Electronic Transfer of Geotechnical and Geoenvironmental Data},
+  title={Electronic {T}ransfer of {G}eotechnical and {G}eoenvironmental {D}ata},
   author={{Association of Geotechnical and Geoenvironmental Specialists}},
   year={2017},
   edition={4.0.4},
@@ -7,18 +7,11 @@
 }
 
 @article{AGS:2021,
-  title={Electronic Transfer of Geotechnical and Geoenvironmental Data},
+  title={Electronic {T}ransfer of {G}eotechnical and {G}eoenvironmental {D}ata},
   author={{Association of Geotechnical and Geoenvironmental Specialists}},
   year={2021},
   edition={4.1},
   publisher={Association of Geotechnical and Geoenvironmental Specialists}
-}
-
-@online{Lewis:2021,
-  title={Example Jupyter Notebook},
-  author={Lewis, Edward},
-  year={2021},
-  url={https://gitlab.com/ags-data-format-wg/ags-python-library/-/blob/main/examples/ags.ipynb}
 }
 
 @software{reback2020pandas,
