Update JOSS paper to address reviewer comments
- Add information about 'state of field' and alternative sofware
- Add references to all AGS4 guidelines, including 4.1.1
- Update screenshot of example error log

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -1,3 +1,11 @@
+@article{AGS:2011,
+  title={Electronic {T}ransfer of {G}eotechnical and {G}eoenvironmental {D}ata},
+  author={{Association of Geotechnical and Geoenvironmental Specialists}},
+  year={2011},
+  edition={4.0.3},
+  publisher={Association of Geotechnical and Geoenvironmental Specialists}
+}
+
 @article{AGS:2017,
   title={Electronic {T}ransfer of {G}eotechnical and {G}eoenvironmental {D}ata},
   author={{Association of Geotechnical and Geoenvironmental Specialists}},
@@ -11,6 +19,14 @@
   author={{Association of Geotechnical and Geoenvironmental Specialists}},
   year={2021},
   edition={4.1},
+  publisher={Association of Geotechnical and Geoenvironmental Specialists}
+}
+
+@article{AGS:2022,
+  title={Electronic {T}ransfer of {G}eotechnical and {G}eoenvironmental {D}ata},
+  author={{Association of Geotechnical and Geoenvironmental Specialists}},
+  year={2022},
+  edition={4.1.1},
   publisher={Association of Geotechnical and Geoenvironmental Specialists}
 }
 
@@ -91,4 +107,18 @@
            pages = {87--90},
              url = {https://eprints.soton.ac.uk/403913/},
         abstract = {It is increasingly necessary for researchers in all fields to write computer code, and in order to reproduce research results, it is important that this code is published. We present Jupyter notebooks, a document format for publishing code, results and explanations in a form that is both readable and executable. We discuss various tools and use cases for notebook documents.}
+}
+
+@misc{chandler_2021,
+  title={AGS Checkers, Diggs and the future world of Data Transfer},
+  author={Roger Chandler},
+  url={https://communities.bentley.com/products/geotechnical1/b/geoblog/posts/ags-checkers-diggs-and-the-future-world-of-data-transfer},
+  year={2021}
+}
+
+@misc{AGS_website_2021,
+  title={AGS Validator (Beta)},
+  author={{Association of Geotechnical and Geoenvironmental Specialists}},
+  url={https://www.ags.org.uk/data-format/ags-validator},
+  year={2021}
 }
