Test Jupyter Notebook file with examples

--- a/examples/Plot_locations_and_create_strip_log.ipynb
+++ b/examples/Plot_locations_and_create_strip_log.ipynb
@@ -124,6 +124,7 @@
     }
    ],
    "source": [
+    "# NBVAL_SKIP\n",
     "import matplotlib.pyplot as plt \n",
     "\n",
     "fig, ax = plt.subplots(figsize=(12,8))\n",
@@ -165,6 +166,7 @@
     }
    ],
    "source": [
+    "# NBVAL_SKIP\n",
     "import contextily as cx\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(12,8))\n",
@@ -290,6 +292,7 @@
     }
    ],
    "source": [
+    "# NBVAL_SKIP\n",
     "import geopandas as gpd\n",
     "from shapely.geometry import Point\n",
     "\n",
@@ -322,6 +325,7 @@
     }
    ],
    "source": [
+    "# NBVAL_SKIP\n",
     "fig, ax = plt.subplots(figsize=(16, 20))\n",
     "\n",
     "# Plot all boreholes\n",
@@ -378,6 +382,7 @@
     }
    ],
    "source": [
+    "# NBVAL_SKIP\n",
     "from striplog import Legend, Lexicon, Interval, Component, Striplog\n",
     "\n",
     "# Create custom legend\n",
