--- a/examples/Plot_locations_and_create_strip_log.ipynb
+++ b/examples/Plot_locations_and_create_strip_log.ipynb
@@ -355,6 +355,37 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from striplog import Legend, Lexicon, Interval, Component, Striplog\n",
+    "\n",
+    "# Create custom legend\n",
+    "l = u\"\"\"colour, component lithology, hatch\n",
+    "orange, GRAVEL, o\n",
+    "yellow, SAND, .\n",
+    "greenyellow, SILT, |\n",
+    "green, CLAY, /\n",
+    "\"\"\"\n",
+    "legend = Legend.from_csv(text=l)\n",
+    "\n",
+    "# Initiate list to store intervals/layers\n",
+    "intervals = []\n",
+    "\n",
+    "# You will want a lexicon of some kind to interpret entries in GEOL_DESC\n",
+    "lexicon = Lexicon.default()\n",
+    "\n",
+    "# Pick a location of interest and extract layer information from the GEOL table\n",
+    "GEOL = AGS4.convert_to_numeric(tables['GEOL'])\n",
+    "\n",
+    "for row in GEOL.loc[GEOL.LOCA_ID.eq('CP2A15CE'), :].to_dict(orient='records'):\n",
+    "    interval = Interval(top=row['GEOL_TOP'], base=row['GEOL_BASE'], description=row['GEOL_DESC'], lexicon=lexicon)\n",
+    "    intervals.append(interval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -383,30 +414,9 @@
    ],
    "source": [
     "# NBVAL_SKIP\n",
-    "from striplog import Legend, Lexicon, Interval, Component, Striplog\n",
     "\n",
-    "# Create custom legend\n",
-    "l = u\"\"\"colour, component lithology, hatch\n",
-    "orange, GRAVEL, o\n",
-    "yellow, SAND, .\n",
-    "greenyellow, SILT, |\n",
-    "green, CLAY, /\n",
-    "\"\"\"\n",
-    "legend = Legend.from_csv(text=l)\n",
+    "# Plot legend\n",
     "legend.plot()\n",
-    "\n",
-    "# Initiate list to store intervals/layers\n",
-    "intervals = []\n",
-    "\n",
-    "# You will want a lexicon of some kind to interpret entries in GEOL_DESC\n",
-    "lexicon = Lexicon.default()\n",
-    "\n",
-    "# Pick a location of interest and extract layer information from the GEOL table\n",
-    "GEOL = AGS4.convert_to_numeric(tables['GEOL'])\n",
-    "\n",
-    "for row in GEOL.loc[GEOL.LOCA_ID.eq('CP2A15CE'), :].to_dict(orient='records'):\n",
-    "    interval = Interval(top=row['GEOL_TOP'], base=row['GEOL_BASE'], description=row['GEOL_DESC'], lexicon=lexicon)\n",
-    "    intervals.append(interval)\n",
     "    \n",
     "# Then make a striplog from the list:\n",
     "slog = Striplog(list_of_Intervals=intervals) \n",
@@ -439,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
