paper: copy edits

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -110,7 +110,7 @@
 }
 
 @misc{chandler_2021,
-  title={AGS Checkers, Diggs and the future world of Data Transfer},
+  title={AGS Checkers, {DIGGS} and the future world of Data Transfer},
   author={Roger Chandler},
   url={https://communities.bentley.com/products/geotechnical1/b/geoblog/posts/ags-checkers-diggs-and-the-future-world-of-data-transfer},
   year={2021}
