Add urls to references in JOSS paper

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -3,7 +3,8 @@
   author={{Association of Geotechnical and Geoenvironmental Specialists}},
   year={2011},
   edition={4.0.3},
-  publisher={Association of Geotechnical and Geoenvironmental Specialists}
+  publisher={Association of Geotechnical and Geoenvironmental Specialists},
+  url={https://www.ags.org.uk/data-format/ags4-data-format}
 }
 
 @article{AGS:2017,
@@ -11,7 +12,8 @@
   author={{Association of Geotechnical and Geoenvironmental Specialists}},
   year={2017},
   edition={4.0.4},
-  publisher={Association of Geotechnical and Geoenvironmental Specialists}
+  publisher={Association of Geotechnical and Geoenvironmental Specialists},
+  url={https://www.ags.org.uk/data-format/ags4-data-format}
 }
 
 @article{AGS:2021,
@@ -19,7 +21,8 @@
   author={{Association of Geotechnical and Geoenvironmental Specialists}},
   year={2021},
   edition={4.1},
-  publisher={Association of Geotechnical and Geoenvironmental Specialists}
+  publisher={Association of Geotechnical and Geoenvironmental Specialists},
+  url={https://www.ags.org.uk/data-format/ags4-data-format}
 }
 
 @article{AGS:2022,
@@ -27,7 +30,8 @@
   author={{Association of Geotechnical and Geoenvironmental Specialists}},
   year={2022},
   edition={4.1.1},
-  publisher={Association of Geotechnical and Geoenvironmental Specialists}
+  publisher={Association of Geotechnical and Geoenvironmental Specialists},
+  url={https://www.ags.org.uk/data-format/ags4-data-format}
 }
 
 @software{reback2020pandas,
