Minor fixes to JOSS paper

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -1,5 +1,5 @@
 @article{AGS:2011,
-  title={Electronic {T}ransfer of {G}eotechnical and {G}eoenvironmental {D}ata},
+  title={Electronic {T}ransfer of {G}eotechnical and {G}eoenvironmental {D}ata {E}dition 4 {A}ddendum 3},
   author={{Association of Geotechnical and Geoenvironmental Specialists}},
   year={2011},
   edition={4.0.3},
@@ -8,7 +8,7 @@
 }
 
 @article{AGS:2017,
-  title={Electronic {T}ransfer of {G}eotechnical and {G}eoenvironmental {D}ata},
+  title={Electronic {T}ransfer of {G}eotechnical and {G}eoenvironmental {D}ata {E}dition 4 {A}ddendum 4},
   author={{Association of Geotechnical and Geoenvironmental Specialists}},
   year={2017},
   edition={4.0.4},
@@ -17,7 +17,7 @@
 }
 
 @article{AGS:2021,
-  title={Electronic {T}ransfer of {G}eotechnical and {G}eoenvironmental {D}ata},
+  title={Electronic {T}ransfer of {G}eotechnical and {G}eoenvironmental {D}ata {E}dition 4.1},
   author={{Association of Geotechnical and Geoenvironmental Specialists}},
   year={2021},
   edition={4.1},
@@ -26,7 +26,7 @@
 }
 
 @article{AGS:2022,
-  title={Electronic {T}ransfer of {G}eotechnical and {G}eoenvironmental {D}ata},
+  title={Electronic {T}ransfer of {G}eotechnical and {G}eoenvironmental {D}ata {E}dition 4.1.1},
   author={{Association of Geotechnical and Geoenvironmental Specialists}},
   year={2022},
   edition={4.1.1},
