--- a/changelog.txt
+++ b/changelog.txt
@@ -12,6 +12,8 @@ Changelog
 - Improve check for Rule 15 to include units defined in PU columns
 - Improve check for Rule 16 to provide warning if a user-defined abbreviation
   duplicates an existing standard abbreviation for the same field
+- Update check_file() to handle an already opened file or stream. The first
+  parameter name input_file is changed to filepath_or_buffer.
 - TODO Update check for Rule 1 to allow extend ASCII characters
 - TODO Reinstate deprecated fields/groups that had been deleted from the v4.1.1
   standard dictionary
