--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+0.6.0 (Pending)
+--------------
+- Report exceptions in the error log using the description 'Validation Process
+  Error'
+
 0.5.0 (2024-01-27)
 ------------------
 
